Bug 504431 - Kickoff falls back to GenericName for its subtitle if Comment is unset, but Task Manager doesn't
Summary: Kickoff falls back to GenericName for its subtitle if Comment is unset, but T...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 6.3.5
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-17 17:26 UTC by Tamás Králl
Modified: 2025-05-22 15:23 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Králl 2025-05-17 17:26:26 UTC
SUMMARY
In Kickoff's list view there's a subtitle below each program. This comes from the program's desktop file "Comment" property. If the "Comment" is missing, the "Description" (GenericName) property will be used instead.

This "fallback" behaviour might be intended. If that is the case, then the Task Manager should also use that behaviour. The Task Manager uses the "Description" property for its subtitle (accessed by hovering over a pinned icon). However, if the "Description" is missing, it won't try to use the "Comment" for the subtitle.

In short, Kickoff tries to use the "Description" if the "Comment" is missing, but the Task Manager doesn't try to use the "Comment" if the "Description" is missing.
Comment 1 Bug Janitor Service 2025-05-22 04:46:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5510
Comment 2 Nate Graham 2025-05-22 14:47:34 UTC
Git commit ae39f3219d6fc849fe8de0d1c165a572598082fe by Nate Graham.
Committed on 22/05/2025 at 13:51.
Pushed by ngraham into branch 'master'.

libtaskmanager: show Comment for launcher icons when appropriate

Right now, launcher icons get a caption equal to the app's GenericName,
if one is set in the metadata. If not, it gets no caption.

This differs from what Kicker and Kickoff Manager do: a more complex
behavior to show the Comment if the app has no GenericName or if its
GenericName is equal to its Name. Let's replicate the same logic here.
FIXED-IN: 6.4.0

M  +18   -4    libtaskmanager/tasktools.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/ae39f3219d6fc849fe8de0d1c165a572598082fe
Comment 3 Nate Graham 2025-05-22 15:23:23 UTC
Git commit 45784326e48665849ba881a442d0d76bb2b22ca0 by Nate Graham.
Committed on 22/05/2025 at 15:06.
Pushed by ngraham into branch 'Plasma/6.4'.

libtaskmanager: show Comment for launcher icons when appropriate

Right now, launcher icons get a caption equal to the app's GenericName,
if one is set in the metadata. If not, it gets no caption.

This differs from what Kicker and Kickoff Manager do: a more complex
behavior to show the Comment if the app has no GenericName or if its
GenericName is equal to its Name. Let's replicate the same logic here.
FIXED-IN: 6.4.0


(cherry picked from commit ae39f3219d6fc849fe8de0d1c165a572598082fe)

Co-authored-by: Nate Graham <nate@kde.org>

M  +18   -4    libtaskmanager/tasktools.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/45784326e48665849ba881a442d0d76bb2b22ca0